# modern-cpp-gamedev-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-format.yaml  main.cpp  pch.h  test.tmx
cmake/: Cache.cmake  CompilerWarnings.cmake  StandardProjectSettings.cmake  Tileson.cmake  entt.cmake  glm.cmake  json.cmake  raylib.cmake  spdlog.cmake  tinytmx.cmake
web/: shell.html
